# deadyet

./: .drone.yml  Cargo.toml  README.md
src/: lib.rs  main.rs
templates/: base.tera  is_it_dead.tera  range_list.tera
tests/: dead.rs
