[package]
name = "deadyet"
version = "0.1.0"
authors = ["Markus Becker <mtib.becker@gmail.com>"]
edition = "2018"
description = "Checks whether hex representations contain patterns"
repository = "https://github.com/mtib/deadyet"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "deadyet"
path = "src/lib.rs"

[dependencies]
