[package]
name = "deadyet"
version = "0.3.0"
authors = [ "Markus Becker <mtib.becker@gmail.com>" ]
edition = "2018"
description = "Checks whether hex representations contain patterns"
repository = "https://github.com/mtib/deadyet"
license = "MIT"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = [ "cdylib" ]

[dependencies]
wasm-bindgen = "0.2.29"

  [dependencies.web-sys]
  version = "0.3.45"
  features = [ "console" ]

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

  [dependencies.rocket_contrib]
  version = "0.4.5"
  default-features = false
  features = [ "handlebars_templates", "tera_templates" ]
