[package]
name = "deadyet"
version = "0.3.0"
authors = ["Markus Becker <mtib.becker@gmail.com>"]
edition = "2018"
description = "Checks whether hex representations contain patterns"
repository = "https://github.com/mtib/deadyet"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "deadyet"
path = "src/lib.rs"

[[bin]]
name = "deadyet_web"
path = "src/main.rs"

[dependencies]
cached = "0.19.0"
rocket = "0.4.5"
serde = { version = "1.0", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates", "tera_templates"]
